Refactor Docker and application configurations for improved environment management. Update Dockerfiles to utilize environment files for service configurations. Enhance backend with new command for running the application and add CORS headers in the main application. Update frontend dependencies and remove unused components. Improve GraphQL token management and enhance CORS handling in Nginx configuration. Refactor authentication pages for better structure and user experience.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 
 services:
   nginx:
@@ -15,8 +14,8 @@ services:
     build: ./backend
     expose:
       - "8000"
-    environment:
-      - MONGODB_URL=${MONGODB_URL}
+    env_file:
+      - ./backend/.env
     volumes:
       - ./backend:/app
     networks:
@@ -26,6 +25,8 @@ services:
     build: ./frontend
     expose:
       - "3000"
+    env_file:
+      - ./frontend/.env
     volumes:
       - ./frontend:/app
       - /app/node_modules
