--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,4 +9,7 @@ COPY . .
 
 EXPOSE 8000
 
-CMD ["python", "run.py"]
+ENV PYTHONPATH=/app
+ENV PYTHONUNBUFFERED=1
+
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
